# mHC.cu

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.githooks/: pre-commit
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
csrc/benchmarks/: bench_fused_rmsnorm_matmul.cu  bench_mhc_layer.cu  bench_rmsnorm.cu  bench_rmsnorm_backward.cu  bench_sinkhorn_knopp.cu  bench_stream_ops.cu  bench_stream_ops_backward.cu
csrc/include/: utils.h
csrc/kernels/: fused_rmsnorm_matmul.cuh  mhc_layer.cuh  rmsnorm.cuh  sinkhorn_knopp.cuh  stream_ops.cuh
csrc/tests/: test_fused_rmsnorm_matmul.cu  test_fused_rmsnorm_matmul_backward.cu  test_mhc_layer.cu  test_rmsnorm.cu  test_rmsnorm_backward.cu  test_sinkhorn_knopp.cu  test_stream_aggregate_backward.cu  test_stream_distribute_backward.cu  test_stream_mix_backward.cu  test_stream_mix_tc.cu
src/csrc/: CMakeLists.txt
src/csrc/benchmarks/: bench_fused_rmsnorm_matmul.cu  bench_fused_rmsnorm_matmul_backward.cu  bench_mhc_layer.cu  bench_rmsnorm.cu  bench_rmsnorm_backward.cu  bench_sinkhorn_knopp.cu  bench_sinkhorn_knopp_backward.cu  bench_stream_ops.cu  bench_stream_ops_backward.cu
src/csrc/include/: mhc_types.h  utils.cuh
src/csrc/kernels/: fused_rmsnorm_matmul.cuh  mhc_layer.cuh  rmsnorm.cuh  sinkhorn_knopp.cuh  stream_ops.cuh  type_conversions.cuh
src/csrc/tests/: test_fused_rmsnorm_matmul.cu  test_fused_rmsnorm_matmul_backward.cu  test_mhc_layer.cu  test_rmsnorm.cu  test_rmsnorm_backward.cu  test_sinkhorn_knopp.cu  test_stream_ops.cu  test_stream_ops_backward.cu
src/python/: bindings.cu
src/python/benchmarks/: bench_layer.py
src/python/mhc/: __init__.py  layer.py  model.py  ops.py  trainer.py
src/python/tests/: test_layer.py  test_model.py  test_ops.py
